cmake_minimum_required(VERSION 3.10)

##############################################################################################################################
# Other CMake Global settings:
include(GNUInstallDirs)
##############################################################################################################################

#############################################################################################################################
# Subprojects:
ADD_SUBDIRECTORY(mdz_http_client)
ADD_SUBDIRECTORY(mdz_http_server)

#############################################################################################################################

